--- a/libs/sdk-py/pyproject.toml
+++ b/libs/sdk-py/pyproject.toml
@@ -23,7 +23,12 @@ Slack = "https://www.langchain.com/join-community"
 Reddit = "https://www.reddit.com/r/LangChain/"
 
 [dependency-groups]
-test = ["pytest", "pytest-asyncio", "pytest-mock", "pytest-watch"]
+test = [
+    "pytest",
+    "pytest-asyncio",
+    "pytest-mock",
+    "pytest-watch",
+]
 lint = ["ruff", "codespell", "mypy"]
 dev = [
   { include-group = "test" },
