--- a/libs/sdk-py/Makefile
+++ b/libs/sdk-py/Makefile
@@ -17,7 +17,7 @@ lint lint_diff:
 	uv run ruff check .
 	[ "$(PYTHON_FILES)" = "" ] || uv run ruff format $(PYTHON_FILES) --diff
 	[ "$(PYTHON_FILES)" = "" ] || uv run ruff check --select I $(PYTHON_FILES)
-	uvx ty check .
+	uv run ty check .
 
 format format_diff:
 	uv run ruff check --select I --fix $(PYTHON_FILES)
