--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -322,6 +322,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           generateReleaseNotes: false
           tag: ${{needs.build.outputs.tag}}
-          name: Release - ${{ needs.build.outputs.pkg-name }}==${{ needs.build.outputs.version }}
+          name: ${{ needs.build.outputs.pkg-name }}==${{ needs.build.outputs.version }}
           body: ${{ needs.release-notes.outputs.release-body }}
           commit: ${{ github.sha }}
