Add unified spell_check targets across all libs
This adds codespell spell checking to all library packages in the repo,
following the maintainer's request in issue #5021 for a unified approach.

Changes:
- Add spell_check and spell_fix targets to root Makefile that iterates
  through all libs (matching existing pattern for lint/format/test)
- Add spell_check and spell_fix targets to lib Makefiles:
  - libs/cli/Makefile
  - libs/checkpoint/Makefile
  - libs/checkpoint-sqlite/Makefile
  - libs/checkpoint-postgres/Makefile
  - libs/sdk-py/Makefile
- Add [tool.codespell] configuration to lib pyproject.toml files:
  - libs/cli/pyproject.toml
  - libs/checkpoint/pyproject.toml
  - libs/checkpoint-sqlite/pyproject.toml
  - libs/checkpoint-postgres/pyproject.toml
  - libs/prebuilt/pyproject.toml
  - libs/sdk-py/pyproject.toml
- Add codespell to lint dependency group in libs/langgraph/pyproject.toml

Fixes #5021

--- a/libs/checkpoint-postgres/Makefile
+++ b/libs/checkpoint-postgres/Makefile
@@ -1,4 +1,4 @@
-.PHONY: test test_watch lint format
+.PHONY: test test_watch lint format spell_check spell_fix
 
 ######################
 # TESTING AND COVERAGE
@@ -64,3 +64,9 @@ lint lint_diff lint_package lint_tests:
 format format_diff:
 	uv run ruff format $(PYTHON_FILES)
 	uv run ruff check --select I --fix $(PYTHON_FILES)
+
+spell_check:
+	uv run codespell --toml pyproject.toml
+
+spell_fix:
+	uv run codespell --toml pyproject.toml -w
