--- a/libs/sdk-py/pyproject.toml
+++ b/libs/sdk-py/pyproject.toml
@@ -79,3 +79,7 @@ per-file-ignores = { "tests/**" = ["S101", "B017"] }
 
 [tool.ty.rules]
 no-matching-overload = "ignore"
+
+[tool.codespell]
+ignore-words-list = "langgraph,langchain"
+skip = "*.lock"
