--- a/libs/checkpoint/pyproject.toml
+++ b/libs/checkpoint/pyproject.toml
@@ -78,3 +78,7 @@ warn_unused_ignores = "True"
 warn_redundant_casts = "True"
 allow_redefinition = "True"
 disable_error_code = "typeddict-item, return-value"
+
+[tool.codespell]
+ignore-words-list = "langgraph,langchain,checkpointer,checkpointing,serializable,deserializable"
+skip = "*.lock"
