--- a/libs/cli/pyproject.toml
+++ b/libs/cli/pyproject.toml
@@ -72,3 +72,7 @@ lint.select = [
 ]
 lint.ignore = ["E501", "B008"]
 target-version = "py310"
+
+[tool.codespell]
+ignore-words-list = "langgraph,langchain,checkpointer"
+skip = "*.lock"
