--- a/libs/langgraph/pyproject.toml
+++ b/libs/langgraph/pyproject.toml
@@ -38,7 +38,7 @@ Homepage = "https://docs.langchain.com/oss/python/langgraph/overview"
 Documentation = "https://reference.langchain.com/python/langgraph/"
 Source = "https://github.com/langchain-ai/langgraph/tree/main/libs/langgraph"
 Changelog = "https://github.com/langchain-ai/langgraph/releases"
-Twitter = "https://x.com/LangChainAI"
+Twitter = "https://x.com/LangChain"
 Slack = "https://www.langchain.com/join-community"
 Reddit = "https://www.reddit.com/r/LangChain/"
 
