--- a/libs/prebuilt/pyproject.toml
+++ b/libs/prebuilt/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
 
 [project.urls]
 Source = "https://github.com/langchain-ai/langgraph/tree/main/libs/prebuilt"
-Twitter = "https://x.com/LangChainAI"
+Twitter = "https://x.com/LangChain"
 Slack = "https://www.langchain.com/join-community"
 Reddit = "https://www.reddit.com/r/LangChain/"
 
