--- a/.github/workflows/_test.yml
+++ b/.github/workflows/_test.yml
@@ -13,17 +13,32 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
+        os:
+          - ubuntu-latest
+          - windows-latest
         python-version:
-          - "3.10"
           - "3.11"
           - "3.12"
-          - "3.13"
-          - "3.14"
-
-    name: "test #${{ matrix.python-version }}"
+        exclude:
+          # Run full Python version matrix only on Ubuntu
+          - os: windows-latest
+            python-version: "3.10"
+          - os: windows-latest
+            python-version: "3.13"
+          - os: windows-latest
+            python-version: "3.14"
+        include:
+          # Add remaining Python versions for Ubuntu only
+          - os: ubuntu-latest
+            python-version: "3.10"
+          - os: ubuntu-latest
+            python-version: "3.13"
+          - os: ubuntu-latest
+            python-version: "3.14"
+    runs-on: ${{ matrix.os }}
+    name: "test ${{ matrix.os }} #${{ matrix.python-version }}"
     steps:
       - uses: actions/checkout@v6
       - name: Set up Python ${{ matrix.python-version }}
@@ -34,7 +49,7 @@ jobs:
           cache-suffix: test-${{ inputs.working-directory }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
-        if: ${{ !github.event.pull_request.head.repo.fork }}
+        if: ${{ !github.event.pull_request.head.repo.fork && matrix.os == 'ubuntu-latest' }}
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_RO_TOKEN }}
