ci(langgraph): add python 3.14 support across matrices and cli schema (#5253)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,12 +117,13 @@ jobs:
       matrix:
         python-version:
           - "3.13"
+          - "3.14"
     steps:
       - uses: actions/checkout@v6
       - name: Set up Python ${{ matrix.python-version }}
         uses: astral-sh/setup-uv@v7
         with:
-          python-version: "3.13"
+          python-version: ${{ matrix.python-version }}
           enable-cache: true
           cache-suffix: "schema-check-cli"
       - name: Install CLI dependencies
