--- a/libs/cli/Makefile
+++ b/libs/cli/Makefile
@@ -33,6 +33,12 @@ format format_diff:
 	uv run ruff format $(PYTHON_FILES)
 	uv run ruff check --select I --fix $(PYTHON_FILES)
 
+spell_check:
+	uv run codespell --toml pyproject.toml
+
+spell_fix:
+	uv run codespell --toml pyproject.toml -w
+
 update-schema:
 	uv run python generate_schema.py
 
