--- a/libs/checkpoint-postgres/pyproject.toml
+++ b/libs/checkpoint-postgres/pyproject.toml
@@ -84,3 +84,7 @@ now = true
 delay = 0.1
 runner_args = ["--ff", "-x", "-v", "--tb", "short"]
 patterns = ["*.py"]
+
+[tool.codespell]
+skip = "*.lock"
+
