feat: add Pandas DataFrame/Series serialization via msgpack with Arrow
Add first-class Pandas DataFrame and Series serialization support to
JsonPlusSerializer using Arrow IPC format (with pickle fallback for
unsupported types). This replaces the previous behavior where pandas
objects fell through to the top-level pickle_fallback, making them
proper msgpack extension types (EXT_PANDAS_DATAFRAME=7, EXT_PANDAS_SERIES=8).

Closes #5077

--- a/libs/checkpoint/pyproject.toml
+++ b/libs/checkpoint/pyproject.toml
@@ -16,6 +16,12 @@ dependencies = [
     "ormsgpack>=1.12.0",
 ]
 
+[project.optional-dependencies]
+pandas = [
+    "pandas>=2.0.0",
+    "pyarrow>=14.0.0",
+]
+
 [project.urls]
 Source = "https://github.com/langchain-ai/langgraph/tree/main/libs/checkpoint"
 Twitter = "https://x.com/LangChain"
@@ -32,6 +38,7 @@ test = [
   "numpy",
   "pandas",
   "pandas-stubs>=2.2.2.240807",
+  "pyarrow>=14.0.0",
   "redis",
 ]
 lint = [
